@@ -15,6 +15,8 @@
 
 2002-05-25  Heikki Junes  <heikki.junes@hut.fi>
 
+	* lilypond-mode.el: Added Deutsch notes and fixed "Quick notes".
+
 	* lilypond-mode.el: Write notes with fewer keystrokes trough a 
 	"Quick notes"-interface.
 
